--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-aria/visually-hidden": "3.8.12",
     "@reduxjs/toolkit": "^2.2.5",
     "@supabase/supabase-js": "^2.43.4",
+    "@vercel/analytics": "^1.3.1",
     "clsx": "2.1.1",
     "framer-motion": "~11.1.1",
     "react": "18.3.1",
