--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nextui-org/switch": "2.0.30",
     "@nextui-org/system": "2.2.1",
     "@nextui-org/theme": "2.2.5",
+    "@react-aria/i18n": "^3.11.1",
     "@react-aria/visually-hidden": "3.8.12",
     "@reduxjs/toolkit": "^2.2.5",
     "@supabase/supabase-js": "^2.43.4",
