--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@supabase/supabase-js": "^2.43.4",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "clsx": "2.1.1",
     "framer-motion": "~11.1.1",
     "i18next": "^23.11.5",
