--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^14.1.2",
+    "react-inlinesvg": "^4.1.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "6.23.0",
+    "react-use-draggable-scroll": "^0.4.7",
     "recharts": "^2.12.7",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.3",
